feat(logs): add logging important info
Also remove unnecessary router
