# src/aibolit/schemas/openapi_generated/schemas.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.json
-#   timestamp: 2025-05-11T14:58:00+00:00
+#   timestamp: 2025-05-11T19:12:16+00:00
 
 from __future__ import annotations
 
@@ -62,10 +62,6 @@ class NextTakingsMedicationsResponse(BaseModel):
     next_takings: List[NextTakingsMedications] = Field(..., title='Next Takings')
 
 
-class User(BaseModel):
-    id: PositiveInt = Field(..., title='Id')
-
-
 class UserCreateRequest(BaseModel):
     pass
 
@@ -78,10 +74,6 @@ class ValidationError(BaseModel):
     loc: List[Union[str, int]] = Field(..., title='Location')
     msg: str = Field(..., title='Message')
     type: str = Field(..., title='Error Type')
-
-
-class AllUsers(BaseModel):
-    users: List[User] = Field(..., title='Users')
 
 
 class HTTPValidationError(BaseModel):
