# src/aibolit/schemas/users/schemas.py
@@ -1,22 +1,12 @@
-from typing import List
 from pydantic import BaseModel, ConfigDict, PositiveInt
 
 
-class UserBase(BaseModel):
+class UserCreateRequest(BaseModel): ...
 
+
+class User(BaseModel):
+    id: PositiveInt
     model_config = ConfigDict(from_attributes=True)
 
 
-class User(UserBase):
-    id: PositiveInt
-
-
-class UserCreateRequest(UserBase):
-    pass
-
-
 class UserCreateResponse(User): ...
-
-
-class AllUsers(BaseModel):
-    users: List[User]
