# src/aibolit/transport/rest/users/views.py
@@ -3,7 +3,9 @@ from typing_extensions import Annotated
 
 from aibolit.core.dependencies import get_user_service
 from aibolit.services.users.service import UserService
-from aibolit.schemas.openapi_generated.schemas import AllUsers, UserCreateRequest, UserCreateResponse
+
+# from aibolit.schemas.users.schemas import UserCreateRequest, UserCreateResponse
+from aibolit.schemas.openapi_generated.schemas import UserCreateRequest, UserCreateResponse
 
 router = APIRouter()
 
@@ -12,9 +14,3 @@ router = APIRouter()
 async def create_user(user: UserCreateRequest, user_service: Annotated[UserService, Depends(get_user_service)]):
     new_user_id = await user_service.create_user(user)
     return UserCreateResponse(id=new_user_id)
-
-
-@router.get("/users", response_model=AllUsers)
-async def get_users(user_service: Annotated[UserService, Depends(get_user_service)]):
-    all_users = await user_service.list_users()
-    return all_users
